fixed key issues

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+docs/code_review.md
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -182,7 +182,16 @@ frontend/node_modules/
 # SQLite database
 *.sqlite
 *.sqlite-journal
+*.sqlite-wal
+*.sqlite-shm
+backend/data/
 
 # Docker
 app-data/
+
+# Claude Code
+.claude/
+
+# Frontend local env
+frontend/.env.local
 
